# dobslit-senai-lib-a3

./: README.md  exemplo1.ipynb  exemplo2.ipynb  pyproject.toml
dobslit_senai_a3/: __init__.py
